tests/functional/lang/eval-fail/not-throws.err.exp
error:
       … in the argument of the not operator
         at /pwd/lang/eval-fail/not-throws.nix:1:3:
            1| !(throw "uh oh!")
             |   ^
            2|

       … while calling the 'throw' builtin
         at /pwd/lang/eval-fail/not-throws.nix:1:3:
            1| !(throw "uh oh!")
             |   ^
            2|

       error: uh oh!
